k8s/manifests/forecast-experience/network-policies/allow-egress.yaml
# Allow egress to master-data and insights-collector
# (forecast-experience calls both of them)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: forecast-experience
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: master-data
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: insights-collector
