k8s/manifests/forecast-experience/network-policies/allow-ingress.yaml
# Allow ingress from istio-gateway
# (forecast-experience is the public-facing entry point)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: forecast-experience
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-gateway
